[workspace]

members = [
    "2020/aoc-2020d1p1",
    "2020/aoc-2020d1p2",
    "2020/aoc-2020d2p1",
    "2020/aoc-2020d2p2",
    "2020/aoc-2020d3p1",
    "2020/aoc-2020d3p2",
    "2020/aoc-2020d4p1",
    "2020/aoc-2020d4p2",
    "2020/aoc-2020d5p1",
    "2020/aoc-2020d5p2",
    "2020/aoc-2020d6p1",
    "2020/aoc-2020d6p2",
    "2020/aoc-2020d7p1",
    "2020/aoc-2020d7p2",
    "2020/aoc-2020d8p1",
    "2020/aoc-2020d8p2",
]